test/Test/Compile/Error/TypingErrors/unsolvedMeta.vcl
test : Prop
test = forall x . True